--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
+astroid==2.4.2
+colorama==0.4.3
+isort==5.5.3
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+pylint==2.6.0
 PyQt5==5.15.1
 PyQt5-sip==12.8.1
+PyQt5-stubs==5.14.2.2
+six==1.15.0
+toml==0.10.1
+typed-ast==1.4.1
+wrapt==1.12.1
